--- a/course.html
+++ b/course.html
@@ -3,20 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="title" content="HeinLearn">
+    <meta name="description" content="Programming နဲ႔ပက္သက္ၿပီး လမ္းေပ်ာက္ေနေသာ လူငယ္မ်ားတြက္  ရည္႐ြယ္ထားေသာ Platform တခုျဖစ္ပါတယ္။">
+    <meta name="keywords" content="PHP,Java,Learning,Programming,Code,Heinlearn,Begainner">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
+
     <title>HeinLearn-Courses</title>
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="favicon.icon" type="image/x-icon">
+    <link rel="stylesheet" href="assets/fonts/Prata-Regular.ttf">
+
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+
+    <link rel="icon" href="assets/images/1.jpg">
+    <link rel="apple-touch-icon" href="assets/images/1.jpg">
 </head>
 <body>
-    <div id="no_code">
-        <img src="assets/images/noCode1.jpg" alt="">
+
+    <nav class="navbar navbar-expand-md custom_bgcolor navbar-light shadow sticky-top">
+        <div class="container">
+            <a href="" class="navbar-brand">
+                <img src="assets/images/logoHeinLearn.png" alt="" width="110" height="60">
+            </a>
+            <!--Toggle btn-->
+            <button class="navbar-toggler shadow-none bg-light" data-bs-target="#NavItem" data-bs-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--Sidebar-->
+            <div id="NavItem" class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item me-5"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item me-5"><a href="index.html#course" class="nav-link">Courses</a></li>
+                    <li class="nav-item me-5"><a href="index.html#about" class="nav-link">About</a></li>
+                    <li class="nav-item me-5"><a href="#contact" class="nav-link">Contact Us</a></li>
+                </ul>
+            </div>
+    </nav>
+
+
+    <div id="no_code" class="container mt-5">
+        <h2>No Code Web Development</h2>
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2">
+            <div class="col mt-3">
+                <img src="assets/images/noCode1.jpg" alt="" class="img-fluid w-100">
+            </div>
+            <div class="col">
+                <div class="row mt-3 text-center">
+                    <div class="col">
+                        <p style="font-size: 20px;">Training Period</p>
+                        <h4>3 months</h4>
+                    </div>
+                    <div class="col">
+                        <p>Learning Students</p>
+                        <h4>over 187</h4>
+                    </div>
+                </div>
+                <div class="row mt-5 text-center">
+                    <div class="col">
+                        <p>Course Duration</p>
+                        <h4>31h 56m</h4>
+                    </div>
+                    <div class="col">
+                        <p>Course Fee</p>
+                        <h4>50000 MMK</h4>
+                    </div>
+                </div>
+                <div class="row mt-5 text-center">
+                    <button class="btn btn-danger btn-lg">Enrol Now</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h3 class="my-5">About Course</h3>
+            <p><strong>Visual Interface</strong>- No-code ပလပ္ေဖာင္းမ်ားသည္ အသုံးျပဳသူမ်ားအား အပလီေကးရွင္းကို အျမင္အာ႐ုံျဖင့္ ဒီဇိုင္းထုတ္ႏိုင္ေစမည့္ graphical user interface (GUI) ကို ပံ့ပိုးေပးပါသည္။ အသုံးျပဳသူမ်ားသည္ ျဒပ္စင္မ်ားကို ဆြဲခ်ျခင္း၊ ေဒတာေမာ္ဒယ္မ်ားကို သတ္မွတ္ျခင္းႏွင့္ ကုဒ္မေရးဘဲ အသုံးျပဳသူၾကားခံမ်ားကို ဖန္တီးႏိုင္သည္။
+            <br><br>
+            <strong>အစိတ္အပိုင္း စာၾကည့္တိုက္မ်ား</strong>- ဤပလပ္ေဖာင္းမ်ားသည္ အသုံးျပဳသူမ်ား ၎တို႔၏ အပလီေကးရွင္းမ်ားတြင္ ေပါင္းစည္းႏိုင္သည့္ ႀကိဳတင္တည္ေဆာက္ထားေသာ အစိတ္အပိုင္းမ်ားႏွင့္ ေမာ္ဂ်ဴးမ်ားကို ေပးေဆာင္ပါသည္။ ဤအစိတ္အပိုင္းမ်ားသည္ UI ျဒပ္စင္မ်ား (ခလုတ္မ်ား၊ ေဖာင္မ်ား၊ မီႏူးမ်ား) မွ ရႈပ္ေထြးေသာလုပ္ေဆာင္ႏိုင္စြမ္းမ်ား (ေဒတာေဘ့စ္ေပါင္းစည္းမႈ၊ အေထာက္အထားစိစစ္မႈ၊ ေဒတာျမင္ေယာင္မႈ) တို႔အထိ ကြဲျပားႏိုင္သည္။
+            <br><br>
+            <strong>အလုပ္အသြားအလာ အလိုအေလ်ာက္လုပ္ေဆာင္ျခင္း</strong>- ကုဒ္မရွိေသာ ပလပ္ေဖာင္းမ်ားတြင္ မၾကာခဏဆိုသလို အလုပ္အသြားအလာ အလိုအေလ်ာက္လုပ္ေဆာင္ႏိုင္စြမ္းမ်ား ပါဝင္ၿပီး သုံးစြဲသူမ်ားသည္ အစပ်ိဳးမႈမ်ား သို႔မဟုတ္ ျဖစ္ရပ္မ်ားအေပၚ အေျခခံ၍ လုပ္ေဆာင္မႈမ်ား၏ ဆက္တိုက္မ်ားကို သတ္မွတ္သတ္မွတ္ႏိုင္ေစပါသည္။ ၎သည္ ထပ္ခါတလဲလဲ လုပ္ေဆာင္စရာမ်ားကို အလိုအေလ်ာက္လုပ္ေဆာင္ျခင္း သို႔မဟုတ္ ကုဒ္မပါဘဲ ရႈပ္ေထြးေသာ လုပ္ငန္းလုပ္ငန္းစဥ္မ်ားကို ဖန္တီးႏိုင္ေစပါသည္။
+            <br><br>
+            <strong>ေဒတာေပါင္းစည္းျခင္း</strong>- ကုဒ္မရွိေသာ ပလပ္ေဖာင္းအမ်ားအျပားသည္ ျပင္ပေဒတာရင္းျမစ္မ်ား၊ API မ်ားႏွင့္ ေဒတာေဘ့စ္မ်ားႏွင့္ ေပါင္းစည္းမႈကို ပံ့ပိုးေပးသည္။ ၎သည္ အသုံးျပဳသူမ်ားအား မတူညီေသာ စနစ္မ်ားမွ ေဒတာမ်ားကို ဆြဲထုတ္ကာ ႀကိဳးကိုင္ကာ ၎တို႔၏ အပလီေကးရွင္းမ်ားအတြင္း ကုဒ္မေရးဘဲ ျပသႏိုင္ေစပါသည္။
+            </p>
+        </div>
     </div>
-    <div id="entry">
-        <img src="assets/images/entry.jpeg" alt="">
+    <div id="entry" class="container mt-5">
+        <h2>The Entry Of Programming</h2>
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2">
+            <div class="col mt-3">
+                <img src="assets/images/entry.jpeg" alt="" class="img-fluid w-100">
+            </div>
+            <div class="col">
+                <div class="row mt-3 text-center">
+                    <div class="col">
+                        <p style="font-size: 20px;">Training Period</p>
+                        <h4>2 months</h4>
+                    </div>
+                    <div class="col">
+                        <p>Learning Students</p>
+                        <h4>over 79</h4>
+                    </div>
+                </div>
+                <div class="row mt-5 text-center">
+                    <div class="col">
+                        <p>Course Duration</p>
+                        <h4>27h 56m</h4>
+                    </div>
+                    <div class="col">
+                        <p>Course Fee</p>
+                        <h4>45000 MMK</h4>
+                    </div>
+                </div>
+                <div class="row mt-5 text-center">
+                    <button class="btn btn-danger btn-lg">Enrol Now</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h3 class="my-5">About Course</h3>
+            <p>ပ႐ိုဂရမ္းမင္းနယ္ပယ္သည္ ကြန္ပ်ဴတာပ႐ိုဂရမ္မ်ား သို႔မဟုတ္ ေဆာ့ဖ္ဝဲလ္မ်ားကို ဖန္တီးျခင္း၊ အေကာင္အထည္ေဖာ္ျခင္းႏွင့္ ထိန္းသိမ္းျခင္းတို႔ကို လႊမ္းၿခဳံထားသည္။ ပ႐ိုဂရမ္းမင္းတြင္ တိက်ေသာအလုပ္မ်ားလုပ္ေဆာင္ပုံ သို႔မဟုတ္ ျပႆနာမ်ားကို ေျဖရွင္းနည္းကို ကြန္ပ်ဴတာအား ေျပာျပေသာ ကုဒ္ဟု လူသိမ်ားေသာ စာေရးၫႊန္ၾကားခ်က္မ်ား ပါဝင္ပါသည္။
+            <br><br>
+            <strong>အစိတ္အပိုင္း စာၾကည့္တိုက္မ်ား</strong>- ဤပလပ္ေဖာင္းမ်ားသည္ အသုံးျပဳသူမ်ား ၎တို႔၏ အပလီေကးရွင္းမ်ားတြင္ ေပါင္းစည္းႏိုင္သည့္ ႀကိဳတင္တည္ေဆာက္ထားေသာ အစိတ္အပိုင္းမ်ားႏွင့္ ေမာ္ဂ်ဴးမ်ားကို ေပးေဆာင္ပါသည္။ ဤအစိတ္အပိုင္းမ်ားသည္ UI ျဒပ္စင္မ်ား (ခလုတ္မ်ား၊ ေဖာင္မ်ား၊ မီႏူးမ်ား) မွ ရႈပ္ေထြးေသာလုပ္ေဆာင္ႏိုင္စြမ္းမ်ား (ေဒတာေဘ့စ္ေပါင္းစည္းမႈ၊ အေထာက္အထားစိစစ္မႈ၊ ေဒတာျမင္ေယာင္မႈ) တို႔အထိ ကြဲျပားႏိုင္သည္။
+            <br><br>
+            <strong>အလုပ္အသြားအလာ အလိုအေလ်ာက္လုပ္ေဆာင္ျခင္း</strong>- ကုဒ္မရွိေသာ ပလပ္ေဖာင္းမ်ားတြင္ မၾကာခဏဆိုသလို အလုပ္အသြားအလာ အလိုအေလ်ာက္လုပ္ေဆာင္ႏိုင္စြမ္းမ်ား ပါဝင္ၿပီး သုံးစြဲသူမ်ားသည္ အစပ်ိဳးမႈမ်ား သို႔မဟုတ္ ျဖစ္ရပ္မ်ားအေပၚ အေျခခံ၍ လုပ္ေဆာင္မႈမ်ား၏ ဆက္တိုက္မ်ားကို သတ္မွတ္သတ္မွတ္ႏိုင္ေစပါသည္။ ၎သည္ ထပ္ခါတလဲလဲ လုပ္ေဆာင္စရာမ်ားကို အလိုအေလ်ာက္လုပ္ေဆာင္ျခင္း သို႔မဟုတ္ ကုဒ္မပါဘဲ ရႈပ္ေထြးေသာ လုပ္ငန္းလုပ္ငန္းစဥ္မ်ားကို ဖန္တီးႏိုင္ေစပါသည္။
+            <br><br>
+            <strong>ေဒတာေပါင္းစည္းျခင္း</strong>- ကုဒ္မရွိေသာ ပလပ္ေဖာင္းအမ်ားအျပားသည္ ျပင္ပေဒတာရင္းျမစ္မ်ား၊ API မ်ားႏွင့္ ေဒတာေဘ့စ္မ်ားႏွင့္ ေပါင္းစည္းမႈကို ပံ့ပိုးေပးသည္။ ၎သည္ အသုံးျပဳသူမ်ားအား မတူညီေသာ စနစ္မ်ားမွ ေဒတာမ်ားကို ဆြဲထုတ္ကာ ႀကိဳးကိုင္ကာ ၎တို႔၏ အပလီေကးရွင္းမ်ားအတြင္း ကုဒ္မေရးဘဲ ျပသႏိုင္ေစပါသည္။
+            </p>
+        </div>
     </div>
     <div id="php">
-        <img src="assets/images/php1.png" alt="">
+        
     </div>
     <div id="java">
-        <img src="assets/images/java.jpg" alt="">
+        
     </div>
+
+    <footer style=" background-color: rgba(0, 0, 0, 0.829);" class="mt-5">
+        <div class="container text-center" id="contact" style="color: white;">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3">
+                <div class="col py-5">
+                    <h1>HeinLearn</h1>
+                    <p class="justify-content-center">HeinLearn has been built for those who are studying web development. Start <a href="">Enroll</a> Now and improve your skills.</p>
+                </div>
+                <div class="col py-5">
+                    <h1>Navigation</h1>
+                    <ul style="list-style-type: none;">
+                        <li><a href="index.html" style="text-decoration: none; color: white;">Home</a></li>
+                        <li><a href="index.html#course" style="text-decoration: none; color: white;">Courses</a></li>
+                        <li><a href="index.html#about" style="text-decoration: none; color: white;">About</a></li>
+                        <li><a href="index.html#contact" style="text-decoration: none; color: white;">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col py-5">
+                    <h1>Contact Us</h1>
+                    <p>09-989756420<br>
+                    heinlearn@gmail.com</p>
+                    <a href="https://www.facebook.com/heinlearn?mibextid=ZbWKwL" style="text-decoration: none;"><i class="fa-brands fa-facebook fa-3x px-2" style="color: white;"></i></a>
+                    <a href="https://www.linkedin.com/company/86403215" style="text-decoration: none;"><i class="fa-brands fa-linkedin fa-3x px-2" style="color: white;"></i></a>
+                    <a href="http://www.youtube.com/@heinlearn" style="text-decoration: none;"><i class="fa-brands fa-youtube fa-3x px-2" style="color: white;"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="assets/fontawesome/js/all.min.js"></script>
+    <script src="assets/js/index.js"></script>
+
 </body>
 </html>
