--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon" href="assets/images/1.jpg">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md custom_bgcolor navbar-light shadow">
+    <nav class="navbar navbar-expand-md custom_bgcolor navbar-light shadow sticky-top">
         <div class="container">
             <a href="" class="navbar-brand">
                 <img src="assets/images/logoHeinLearn.png" alt="" width="110" height="60">
@@ -44,14 +44,11 @@
                 </ul>
             </div>
     </nav>
-    <div class="clear">
-
-    </div>
      <div class="container">
         <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2">
             <div class="col d-none d-sm-none d-md-block d-xl-block d-lg-block fs-1 intro_text" style="margin-top: 10%;">
                 <p class="h1" style="font-size: 1.5em;line-height: 80px;">Learn New Things And Develop Yourself!</p>
-                <button class="btn btn-lg get_btn" style="background-color: rgb(196, 14, 14);color: white;">Get started</button>
+                <a href="course.html"><button class="btn btn-lg get_btn" style="background-color: rgb(196, 14, 14);color: white;">Get started</button></a>
             </div>
             <div class="col">
                 <img src="assets/images/desk.webp" alt="" class="img-fluid w-100 mt-5">
@@ -76,7 +73,7 @@
           <div class="row">
               <div class="col d-md-none d-lg-none d-xl-none d-block d-sm-block fs-2 intro_text">        
                 <p class="h1" style="font-size: 1.5em;line-height: 80px;padding: 0px 30px 0px 30px;">Learn New Things And Develop Yourself!</p>
-                <button class="btn btn-lg get_btn mb-5" style="background-color: rgb(196, 14, 14);color: white;">Get started</button>
+                <a href="course.html"><button class="btn btn-lg get_btn mb-5" style="background-color: rgb(196, 14, 14);color: white;">Get started</button></a>
               </div>
           </div>
       </div>
@@ -312,7 +309,7 @@
                 <p class="h1 fs-1 mt-5 pt-5" style="font-size: 2em;">
                 Learn With Practice
                 </p>
-                <p class="fs-5">Learning with practice is a highly effective approach to acquiring new skills and knowledge. By actively engaging in hands-on exercises, problem-solving activities, and real-world applications, you can deepen your understanding and improve your abilities. </p>
+                <p class="fs-3">Learning with practice is a highly effective approach to acquiring new skills and knowledge. By actively engaging in hands-on exercises, problem-solving activities, and real-world applications, you can deepen your understanding and improve your abilities. </p>
                 <p class="pt-5"><i>Hein Min Htet<br>Founder of HeinLearn</i></p>
             </div>
             <div class="col my-5">
@@ -320,46 +317,46 @@
             </div>
         </div>
     </div>
-
     <!--Contact-->
-    <footer style="background-color: black;">
-        <div class="container-fluid" id="contact" style="color: white;">
+    <footer style=" background-color: rgba(0, 0, 0, 0.829);" class="mt-5">
+        <div class="container text-center" id="contact" style="color: white;">
             <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3">
-                <div class="col mt-5 py-5">
+                <div class="col py-5">
                     <h1>HeinLearn</h1>
                     <p class="justify-content-center">HeinLearn has been built for those who are studying web development. Start <a href="">Enroll</a> Now and improve your skills.</p>
                 </div>
-                <div class="col mt-5 py-5">
+                <div class="col py-5">
                     <h1>Navigation</h1>
-                    <ul style="text-decoration: none;">
-                        <li>Home</li>
-                        <li>Courses</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                    <ul style="list-style-type: none;">
+                        <li><a href="index.html" style="text-decoration: none; color: white;">Home</a></li>
+                        <li><a href="#course" style="text-decoration: none; color: white;">Courses</a></li>
+                        <li><a href="#about" style="text-decoration: none; color: white;">About</a></li>
+                        <li><a href="#contact" style="text-decoration: none; color: white;">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col mt-5 py-5">
+                <div class="col py-5">
                     <h1>Contact Us</h1>
                     <p>09-989756420<br>
                     heinlearn@gmail.com</p>
-                    <a href="https://www.facebook.com/heinlearn?mibextid=ZbWKwL" style="text-decoration: none;"><i class="fa-brands fa-facebook fa-3x px-2"></i></a>
-                    <a href="https://www.linkedin.com/company/86403215" style="text-decoration: none;"><i class="fa-brands fa-linkedin fa-3x px-2"></i></a>
-                    <a href="http://www.youtube.com/@heinlearn" style="text-decoration: none;"><i class="fa-brands fa-youtube fa-3x px-2"></i></a>
+                    <a href="https://www.facebook.com/heinlearn?mibextid=ZbWKwL" style="text-decoration: none;"><i class="fa-brands fa-facebook fa-3x px-2" style="color: white;"></i></a>
+                    <a href="https://www.linkedin.com/company/86403215" style="text-decoration: none;"><i class="fa-brands fa-linkedin fa-3x px-2" style="color: white;"></i></a>
+                    <a href="http://www.youtube.com/@heinlearn" style="text-decoration: none;"><i class="fa-brands fa-youtube fa-3x px-2" style="color: white;"></i></a>
                 </div>
             </div>
         </div>
     </footer>
     
-    <script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
-    <script src="assets/fontawesome/js/all.min.js"></script>
-    <script src="assets/js/index.js"></script>
-
-    <!--Plugin-->
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 </body>
 </html>
 
+    
+<script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
+<script src="assets/fontawesome/js/all.min.js"></script>
+<script src="assets/js/index.js"></script>
+
+<!--Plugin-->
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script>
     $(document).ready(function(){
     $('.customer-logos').slick({
